--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -161,18 +161,17 @@
         android:textSize="30sp" />
 
 
-    <!--<LinearLayout
-        android:layout_width="match_parent"
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/背景4"
-        <RelativeLayout
+        android:background="@drawable/beijin4"-->
+        <!--<RelativeLayout
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background=""
         android:layout_gravity="start"
-        android:menue="@menu/nav-menu"
-        android:headerLayout="@Layout/nav_header"
+        android:menu="@menu/nav_menu"
+        android:headerLayout="@layout/header"
         />-->
 
 
@@ -181,10 +180,12 @@
 
 
 
-<!--<android.support.v4.design.widget.NavigationView
+<android.support.design.widget.NavigationView
  android:id="@+id/nav_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/beijin7"
+    android:layout_gravity="start"
     app:menu="@menu/nav_menu"
-    app:headerLayout="@layout/header"/> -->
+    app:headerLayout="@layout/header"/>
 </FrameLayout>
