有滑动菜单了

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/记录"
+            android:id="@+id/jilu"
             android:icon="@drawable/jilu"
             android:title="记录"/>
 
         <item
-            android:id="@+id/统计"
+            android:id="@+id/tongji"
             android:icon="@drawable/tongji"
             android:title="统计"/>
 
         <item
-            android:id="@+id/我的"
+            android:id="@+id/my"
             android:icon="@drawable/my"
             android:title="我的"/>
 
         <item
-            android:id="@+id/设置"
+            android:id="@+id/setting"
             android:icon="@drawable/shezhi"
             android:title="设置"/>
 "
