--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="180dp"
     android:padding="10dp"
-    android:background="#BBBBBB">
+    android:background="#4B90F9">
 
     <de.hdodenhof.circleimageview.CircleImageView
     android:id="@+id/touxiang"
