--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -180,12 +180,12 @@
 
 
 
-<android.support.design.widget.NavigationView
+<!--<android.support.design.widget.NavigationView
  android:id="@+id/nav_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/beijin7"
     android:layout_gravity="start"
     app:menu="@menu/nav_menu"
-    app:headerLayout="@layout/header"/>
+    app:headerLayout="@layout/header"/>-->
 </FrameLayout>
